# rko-solver

./: .gitignore  Authors  CMakeLists.txt  LICENSE  Makefile  README.md  mkdocs.yml  runApp
config/: config-tests.txt  param-online.txt
config/yaml/: config.yaml  param-offline.yaml  param-online.yaml
docs/: CNAME  index.md
examples/kp/: kp10.txt  kp10_multi.txt  kp50.txt
examples/tsp/: tsp_5.txt
include/rkolib/core/: common.hpp  context.hpp  data.hpp  iproblem.hpp  method.hpp  problem.hpp  qlearning.hpp  scalarizer.hpp  solver.hpp
include/rkolib/mh/: brkga.hpp  brkga_cs.hpp  ga.hpp  grasp.hpp  ils.hpp  ipr.hpp  lns.hpp  multistart.hpp  pso.hpp  sa.hpp  vns.hpp
include/rkolib/utils/: io.hpp
instances/kp/: kp10.txt  kp10_multi_test.txt
problems/: tspproblem.cpp  vertexcoverproblem.cpp  vrp_standard.cpp  vrpproblem.cpp
results/: Results_RKO.csv  Solutions_RKO.txt
src/: main.cpp  run.cpp
src/core/: kpproblem.cpp  method.cpp  problem.cpp  qlearning.cpp  solver.cpp
src/mh/: brkga.cpp  brkga_cs.cpp  ga.cpp  grasp.cpp  ils.cpp  ipr.cpp  lns.cpp  multistart.cpp  pso.cpp  sa.cpp  vns.cpp
src/utils/: io.cpp
